Fix layout problems on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,7 +15,7 @@ body {
 
 .home-container {
     display: flex;
-    height:100%;
+    height: 100%;
 }
 
 .shader-canvas {
@@ -29,6 +29,12 @@ body {
   background-color: #fff;
   width: 100%;
   height: 100%;
+}
+
+@media (max-width: 600px) {
+    html, body, #root, .app, .home-container, .shader-canvas, .home-splash-panel {
+        height: auto;
+    }
 }
 
 em {
@@ -144,4 +150,11 @@ a:hover {
   ul.links li a.icon {
     font-size: 0.9em;
   }
+}
+
+.test {
+    width: 100px;
+    background-color: #fff;
+    position: absolute;
+    bottom: 0;
 }
